添加日志配置

--- a/src/main/resources/bootstrap-test.yml
+++ b/src/main/resources/bootstrap-test.yml
@@ -8,4 +8,4 @@ spring:
         server-addr: 192.168.31.61:8848
         namespace: ce9e9b46-26c4-47f7-a89e-a0044fcdddff
 log:
-  path: /tmp
+  path: /usr/local/log/test/gpay/gatweay
