--- a/src/main/resources/bootstrap-prod.yml
+++ b/src/main/resources/bootstrap-prod.yml
@@ -7,3 +7,5 @@ spring:
       discovery:
         server-addr: 192.168.31.61:8848
         namespace: ce9e9b46-26c4-47f7-a89e-a0044fcdddff
+log:
+  path: /usr/local/log/prod/gpay/gatweay
